<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/key_normal_color"
        android:orientation="vertical"
        android:visibility="visible">
        <!-- 显示金额 -->
        <LinearLayout
            android:id="@+id/trans_amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/succeed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/trans_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:gravity="start"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textColor="@color/text_land_main"
                    android:textSize="@dimen/font_size_small" />
                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="140dp"
                    android:gravity="center"
                    android:text="￥0.00"
                    android:textColor="@color/text_land_main"
                    android:textSize="@dimen/font_size_small" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"
            android:visibility="visible"></ImageView>
        <LinearLayout
            android:id="@+id/type_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/type_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/type_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bankcard_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/trans_card_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/card_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>
        <ImageView
            android:id="@+id/line_auth_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>

        <LinearLayout
            android:id="@+id/auth_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/detail_auth_code"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/auth_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>

        <LinearLayout
            android:id="@+id/reference_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/detail_trans_ref_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/reference_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>



        <LinearLayout
            android:id="@+id/vouch_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/detail_voucher_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/voucher_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>

        <LinearLayout
            android:id="@+id/date_time_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/date_and_time"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/date_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>