<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"
            android:visibility="visible"></ImageView>
        <LinearLayout
            android:id="@+id/transtype_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transtype_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/type_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/transtype_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bankcard_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/trans_card_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/card_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>
        <ImageView
            android:id="@+id/line_auth_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>



        <LinearLayout
            android:id="@+id/reference_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:id="@+id/reference_no"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/detail_trans_ref_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/reference_no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>



        <LinearLayout
            android:id="@+id/amount_number_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/detail_amount"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/amount_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="right"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:src="@drawable/line4"></ImageView>

        <!--<LinearLayout-->
            <!--android:id="@+id/date_time_linearlayout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_margin="5dp"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="left"-->
                <!--android:padding="5dp"-->
                <!--android:text="@string/date_and_time"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="@dimen/font_size_small" />-->

            <!--<TextView-->
                <!--android:id="@+id/date_time_tv"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_margin="5dp"-->
                <!--android:layout_weight="1.5"-->
                <!--android:gravity="right"-->
                <!--android:padding="5dp"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="@dimen/font_size_small" />-->
        <!--</LinearLayout>-->
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="cancel"
               android:id="@+id/cancel"/>
           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="confirm"
               android:id="@+id/confirm"/>
       </LinearLayout>

</LinearLayout>